# LTE-Cell-Scanner

./: AUTHORS  CMakeLists.txt  README  README.md  TODO  cmake_to_gen_codeblocks_proj.txt  itload.m  itsave.m  pyitpp.py  tmp.txt
C++/: README
C++/cmake/Modules/: FindFFTW.cmake  FindITPP.cmake  FindRTLSDR.cmake
C++/src/: CellSearch.cpp  constants.cpp  dsp.cpp  itpp_ext.cpp  lte_lib.cpp
C++/test/: test_peak_search.it  test_sss_detect.cpp
Matlab/: CellSearch.m  LTE_DL_receiver.m  LTE_MCS_depunct_LLRcombine.m  LTE_SFBC_demod.m  LTE_intlv_punct.m  Turbo13Dec_x.m  TurboDePunct_x.m  absx2.m  bit_C_S_T.m  chan_est.m  chan_est_20M.m  chan_est_subframe.m  chk_param.m  conv_abs_reg_idx_to_sc_idx.m  conv_idx.m  convert_SIB_bin_to_HEX.m  ctrellis_gen.m  decode_mib.m  decode_pcfich.m  decode_pdcch.m  decode_pdcch_20M.m  decode_pdsch.m  deqam.m  dft.m  ex_odd_even.m  extract_part_from_bin_file.m  extract_tfg.m  extract_tfg_20M.m  f2360_s19.2_bw20_1s_hackrf_SIB.txt  f2360_s19.2_bw20_1s_hackrf_bda_SIB.txt  f2360_s19.2_bw20_1s_hackrf_bda_SIB_HEX.txt  f2360_s19.2_bw20_1s_hackrf_bda_SIB_decoded.txt  f2585_s19.2_bw20_1s_hackrf_1_SIB.txt  f2585_s19.2_bw20_1s_hackrf_SIB.txt  f2585_s19.2_bw20_1s_hackrf_bda1_SIB.txt  f2585_s19.2_bw20_1s_hackrf_bda_SIB.txt  fft_corr.m  filter_wo_tail.m  fs_lte.m  fshift.m  (+85 more)
Matlab/BCCH-DL-SCH-Message-decoder/: BCCH-DL-SCH-Message-decoder.cbp  main.cpp
Matlab/regression_test_result/: find_optimal_Z_th1.m  par_analyze.m  show_result.m
Matlab/regression_test_result/baseline/: CellSearch_test12to22_twist0_fo-100to100_resv1_numPtry3_Prange160.mat  CellSearch_test12to22_twist0_fo-100to100_resv2_numPtry3_Prange160.mat  CellSearch_test12to22_twist0_fo-100to100_resv4_numPtry3_Prange160.mat  CellSearch_test1to33_twist0_fo-100to100_resv1_numPtry3_Prange160.mat  CellSearch_test1to33_twist0_fo-100to100_resv2_numPtry3_Prange160.mat  CellSearch_test1to33_twist0_fo-100to100_resv4_numPtry3_Prange160.mat  CellSearch_test23to33_twist0_fo-100to100_resv1_numPtry3_Prange160.mat  CellSearch_test23to33_twist0_fo-100to100_resv2_numPtry3_Prange160.mat  CellSearch_test23to33_twist0_fo-100to100_resv4_numPtry3_Prange160.mat
Matlab/regression_test_result/baseline_num_peak_th0.5/: CellSearch_test1to33_twist0_fo-140to140_resv1_numPtry3_Prange160_parTh8.5_numPth0.5.mat  CellSearch_test1to33_twist0_fo-140to140_resv2_numPtry3_Prange160_parTh8.5_numPth0.5.mat  CellSearch_test1to33_twist0_fo-140to140_resv4_numPtry3_Prange160_parTh8.5_numPth0.5.mat
Matlab/regression_test_result/par_explore/: CellSearch_test13to16_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test17to20_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test1to33_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test1to34_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8.5_numPth0.5.mat  CellSearch_test1to4_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test21to24_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test25to28_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test29to33_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  CellSearch_test5to8_twist0_fo-140to140_resv2_numPtry1_Prange-1_parTh8_numPth0.5.mat  merge_result.m  (+1 more)
asn1_test/: 36331-ac0.txt  36331-c10.txt  README.txt  main.c  rectangle.asn1  test.asn1
asn1_test/LTE-BCCH-DL-SCH-decode/: 36331-850.asn  36331-ac0.asn  36331-c10.asn  AC-BarringConfig.c  AC-BarringConfig.h  AC-BarringConfig1XRTT-r9.c  AC-BarringConfig1XRTT-r9.h  ARFCN-ValueCDMA2000.c  ARFCN-ValueCDMA2000.h  ARFCN-ValueEUTRA-r9.c  ARFCN-ValueEUTRA-r9.h  ARFCN-ValueEUTRA-v9e0.c  ARFCN-ValueEUTRA-v9e0.h  ARFCN-ValueEUTRA.c  ARFCN-ValueEUTRA.h  ARFCN-ValueGERAN.c  ARFCN-ValueGERAN.h  ARFCN-ValueUTRA.c  ARFCN-ValueUTRA.h  AS-Config-v9e0.c  AS-Config-v9e0.h  AS-Config.c  AS-Config.h  AS-Context-v1130.c  AS-Context-v1130.h  AS-Context.c  AS-Context.h  AbsoluteTimeInfo-r10.c  AbsoluteTimeInfo-r10.h  AccessStratumRelease.c  AccessStratumRelease.h  AdditionalReestabInfo.c  AdditionalReestabInfo.h  AdditionalReestabInfoList.c  AdditionalReestabInfoList.h  AdditionalSI-Info-r9.c  AdditionalSI-Info-r9.h  AdditionalSpectrumEmission.c  AdditionalSpectrumEmission.h  AffectedCarrierFreq-r11.c  (+1558 more)
asn1_test/rectangle_decode/: Makefile.am.sample  rdecode
asn1_test/rectangle_encode/: Rectangle.c  Rectangle.h  main.c  r.ber  rencode
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: FindBLADERF.cmake  FindFFTW.cmake  FindHACKRF.cmake  FindITPP.cmake  FindOPENCL.cmake  FindOpenCL.cmake  FindRTLSDR.cmake
doc/: CellSearch.html  How_to_use_asn1c_lameditor.txt  LTE-PSS-SSS-relative-location.ppt  LTE-Tracker.html  LTE-channel-and-map.ppt  cap_LTE_with_HACKRF.txt  index.html
include/: LTE-Tracker.h  capbuf.h  common.h.in  constants.h  dsp.h  filter_coef.h  itpp_ext.h  lte_lib.h  searcher.h
regression_test_signal_file/: README.txt  f2360_sib1.per  f2585_sib1-10.per  f2585_sib2.per  f2585_sib5-1.per  gather_format_signal_file_for_future.m
src/: CMakeLists.txt  CellSearch.cpp  LTE-Tracker.cpp  capbuf.cpp  common.cpp  constants.cpp  display_thread.cpp  dsp.cpp  exp.cpp  filter_mchn_kernels.cl  filter_mchn_simple_kernel.cl  filter_my_kernels.cl  from_osmocom.cpp  itpp_ext.cpp  lte_lib.cpp  producer_thread.cpp  rtl_sdr_check.cpp  searcher.cpp  searcher_thread.cpp  tracker_thread.cpp
test/: CMakeLists.txt  cap_10M_LTE_with_HACKRF.txt  cap_LTE_with_HACKRF.txt  test_peak_search.cpp  test_sss_detect.cpp  test_sss_detect.it  test_tfg.cpp  test_xcorr_pss.cpp
trunk/: CMakeLists.txt
trunk/Matlab/: README  chan_est.m  create_dl_sig.m  decode_mib.m  extract_tfg.m  mib_test.m  pbch_extract.m  peak_search.m  sss_detect.m  test_peak_search.m  test_peak_search.mat  test_sss_detect.m  test_xcorr_pss.m  tfoec.m  xcorr_pss.m
trunk/include/: capbuf.h  constants.h  itpp_ext.h  lte_lib.h  macros.h  searcher.h
trunk/src/: lte_lib.cpp  macros.cpp
trunk/test/: CMakeLists.txt  capbuf_0000.it  test_tfg.cpp  test_xcorr_pss.cpp
(+35 files in other folders)
